--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="container my-5">
             <h1>Emails:</h1>
             <ol>
-                <li v-for="email in emails">
+                <li v-if="emails.length > 9"
+                v-for="email in emails">
                     {{ email }}
                 </li>
             </ol>
